# letter-management-api

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  deno.json  denon.json  deps.json  docker-compose.yml  env.ts  main.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy.yml
scripts/: docker_build_and_push.sh
src/: context.ts  env.ts  firebase.ts  main.py  main.ts
src/api/: main.py  resolvers.py  schema.py
src/auth/: clerk_auth.py  middleware.py
src/context/: get_context.py
src/db/: firestore.py  utils.py
src/db/milvus/: operations.py  schema.py  utils.py
src/db/postgres/: migrate.py  postgres.py  schema.py
src/firebase/: auth.ts  firebaseFirestore.ts  firebaseStorage.ts  index.ts
src/googleCloud/: documentAI.ts
src/middleware/: authMiddleware.ts  errorMiddleware.ts  loggerMiddleware.ts  timingMiddleware.ts
src/middlewares/: auth.py
src/rag/: document_ai.py  document_loader.py  indexer.py  retriever.py
src/router/: appRouter.ts  documentsRouter.ts  insightsRouter.ts  userRouter.ts
src/service/documentService/: DocumentService.ts
src/service/insightService/: InsightsService.ts
src/service/openAI/: OpenAiManager.ts
src/utils/: db.py  get_env.py  logging.py  redis_client.py  stripSingleLine.ts
templates/: insights_prompt.txt  lipsum.txt  llm_prompt.txt
